--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "konoha"
+version = "0.1.0"
 description = "A user-friendly TUI client for Matrix."
 authors = [ "L3af <L3afMeAlon3@gmail.com>" ]
-version = "0.1.0"
+repository = "https://github.com/L3afMe/konoha"
 edition = "2018"
 
 [dependencies]
@@ -14,6 +15,10 @@ regex = "1.5.4"
 serde_json = "1.0.64"
 url = "2.2.2"
 tracing-subscriber = "0.2.18"
+os_info = "3.0.6"
+backtrace = "0.3.59"
+urlencoding = "1.3.3"
+chrono = "0.4.19"
 
 [dependencies.matrix-sdk]
 git = "https://github.com/matrix-org/matrix-rust-sdk"
