--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -19,11 +19,11 @@ fn_single_line = false
 force_multiline_blocks = false
 format_code_in_doc_comments = true
 format_macro_matchers = true
-format_strings = true
+format_strings = false
 group_imports = "StdExternalCrate"
 hard_tabs = false
 hide_parse_errors = false
-ignore = ['src/utils/emotes.rs']
+ignore = []
 imports_indent = "Block"
 imports_layout = "Mixed"
 indent_style = "Block"
